# chaoke-du-portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  check.py  check_status.py  deploy.py  deploy2.py  docker-compose.yml  next.config.ts  nginx.conf  package-lock.json  package.json
cli/: pyproject.toml
cli/portfolio_cli/: client.py  config.py  main.py
content/blog/: alignment-techniques.md  building-paper-reader.md  code-agent.md  distributed-training.md  evaluation-observability.md  from-llm-to-agent.md  llm-agent.md  lora-qlora-finetune.md  memory-system.md  model-quantization.md  multi-agent-systems.md  planning-ability.md  production-agent.md  prompt-engineering-science.md  pytorch-beginner-guide.md  rag-knowledge-base.md  rl-for-agents.md  rl-from-mdp-to-ppo.md  self-improvement.md  tool-calling.md  toward-agi.md  transformer-and-pretraining.md  transformer-deep-dive.md  vision-transformer.md
messages/: en.json  zh.json
src/app/: globals.css
src/app/[locale]/: layout.tsx  not-found.tsx  page.tsx
src/app/[locale]/about/: page.tsx
src/app/[locale]/blog/: page.tsx
src/app/[locale]/contact/: page.tsx
src/app/[locale]/guestbook/: page.tsx
src/app/[locale]/projects/: page.tsx
src/app/[locale]/resources/: page.tsx
src/app/admin/: layout.tsx  page.tsx
src/components/blog/: BlogList.tsx
src/components/home/: FeaturedProjects.tsx  Hero.tsx  LatestPosts.tsx
src/components/layout/: Footer.tsx  Navbar.tsx  SearchModal.tsx
src/components/projects/: ProjectCard.tsx
src/lib/: auth.ts  db.ts  posts.ts  projects.ts  resources.ts
(+10 files in other folders)
