[project]
name = "portfolio-cli"
version = "0.1.0"
description = "CLI tool for managing the portfolio website"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
portfolio-cli = "portfolio_cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
